Fixed the background not covering the entire page when adding a new row of books.

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
 
 #formFocus {
     display: none;
-    position: absolute;
+    position: fixed;
     height: 100%;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.7);
